[package]
name = "rhymuweb-server"
version = "1.0.0"
description = "HTTP server for providing access to web resources"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["web-programming"]
keywords = ["http", "server"]
repository = "https://github.com/rhymu8354/HttpServer.git"

[dependencies]
async-std = "1.6"
futures = "0.3"
rhymuweb = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
async-ctrlc = "1.2"
async-tls = "0.10"
rustls = "0.18"
structopt = "0.3"
